cmake_minimum_required(VERSION 3.10)

project(Lizardsss)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_SUPPRESS_REGENERATION true)

set(SDL_INCLUDE_PATH ${CMAKE_SOURCE_DIR}/ThirdParty/SDL2/include)
set(SDL_LIBRARY ${CMAKE_SOURCE_DIR}/ThirdParty/SDL2/lib/x64/SDL2.lib)
set(SDL_MAIN_LIBRARY ${CMAKE_SOURCE_DIR}/ThirdParty/SDL2/lib/x64/SDL2main.lib)

set(SDL_IMAGE_INCLUDE_PATH ${CMAKE_SOURCE_DIR}/ThirdParty/SDL2_image/include)
set(SDL_IMAGE_LIBRARY ${CMAKE_SOURCE_DIR}/ThirdParty/SDL2_image/lib/x64/SDL2_image.lib)

set(SDL_TTF_INCLUDE_PATH ${CMAKE_SOURCE_DIR}/ThirdParty/SDL2_ttf/include)
set(SDL_TTF_LIBRARY ${CMAKE_SOURCE_DIR}/ThirdParty/SDL2_ttf/lib/x64/SDL2_ttf.lib)

set(IMGUI_INCLUDE_PATH ${CMAKE_SOURCE_DIR}/ThirdParty/imgui)


file(GLOB_RECURSE IMGUI_FILES
	${CMAKE_SOURCE_DIR}/ThirdParty/imgui/*.h
	${CMAKE_SOURCE_DIR}/ThirdParty/imgui/*.cpp
)

file(GLOB_RECURSE HEADER_FILES
	${CMAKE_SOURCE_DIR}/src/*.h
)

file(GLOB_RECURSE SOURCE_FILES
	${CMAKE_SOURCE_DIR}/src/*.cpp
)

source_group("imgui" FILES ${IMGUI_FILES})


include_directories(
	${SDL_INCLUDE_PATH}
	${SDL_IMAGE_INCLUDE_PATH}
	${SDL_TTF_INCLUDE_PATH}
	${IMGUI_INCLUDE_PATH}
)

add_executable(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES} ${IMGUI_FILES})


target_link_libraries(${PROJECT_NAME}
	${SDL_LIBRARY}
	${SDL_MAIN_LIBRARY}
	${SDL_IMAGE_LIBRARY}
	${SDL_TTF_LIBRARY}
)


add_custom_command(TARGET ${PROJECT_NAME}
	POST_BUILD
	COMMAND cd ${CMAKE_SOURCE_DIR}
	COMMAND "${CMAKE_SOURCE_DIR}/copyDLLs.bat"
	COMMENT "Running copyDLLs.bat"
)


set_target_properties(${PROJECT_NAME} PROPERTIES
	RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin
)

set_target_properties(${PROJECT_NAME} PROPERTIES
	VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
)
